manifests/demodeploy.yaml
#       Copyright 2017 IBM Corp All Rights Reserved

#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at

#       http://www.apache.org/licenses/LICENSE-2.0

#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

#Deploy the pod
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: looper
  labels:
    solution: stock-trader
  annotations: { 
    prism.subkind: Liberty
  }
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: looper
    spec:
      containers:
      - name: looper
#       image: looper:latest
        image: bigloon.icp:8500/stock-trader/looper:demo # IBM Cloud Private
#        image: ibmstocktrader/looper:latest
        ports:
          - containerPort: 9080
          - containerPort: 9443
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /health
            port: 9080
          initialDelaySeconds: 30
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 9080
          initialDelaySeconds: 60
          periodSeconds: 5
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 128Mi
---
#Deploy the service
apiVersion: v1
kind: Service
metadata:
  name: looper-service
  labels:
    app: looper
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 9080
      targetPort: 9080
    - name: https
      protocol: TCP
      port: 9443
      targetPort: 9443
  selector:
    app: looper
---
#Configure the ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: looper-ingress
  labels:
    solution: stock-trader
spec:
  rules:
  - http:
      paths:
      - path: /looper
        backend:
          serviceName: looper-service
          servicePort: 9080
